    - Start work implementing proposal 103: Add a standalone tool to
      generate key certificates.

  o Security fixes:
    - Directory authorities now call routers stable if they have an
      uptime of at least 30 days, even if that's not the median uptime
      in the network. Implements proposal 107, suggested by Kevin Bauer
      and Damon McCoy.

  o Minor fixes (resource management):
    - Count the number of open sockets separately from the number of active
      connection_t objects.  This will let us avoid underusing our
      allocated connection limit.
    - We no longer use socket pairs to link an edge connection to an
      anonymous directory connection.  Instead, we track the link
      internally and transfer the data in-process.  This saves two
      sockets per anonymous directory connection (at the client and at
      the server), and avoids the nasty Windows socketpair() workaround.
    - Keep unused 4k and 16k buffers on free lists, rather than wasting 8k
      for every single inactive connection_t.
    - Free items from the 4/16k-buffer free lists when they haven't been used
      for a while.

  o Minor features (build):
    - Make autoconf search for libevent, openssl, and zlib consistently.
    - Update deprecated macros in configure.in
    - When warning about missing headers, tell the user to let us
      know if the compile succeeds anyway, so we can downgrade the
      warning.
    - Include the current subversion revision as part of the version
      string: either fetch it directly if we're in an SVN checkout, do
      some magic to guess it if we're in an SVK checkout, or use
      the last-detected version if we're building from a .tar.gz.

  o Minor features (logging):
    - Always prepend "Bug: " to any log message about a bug.
    - Put a platform string (e.g. "Linux i686") in the startup log
      message, so when people paste just their logs, we know if it's
      openbsd or windows or what.